--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>View local GeoJSON</title>
-    <meta property="og:description" content="View local GeoJSON without server upload." />
+    <title>View local GeoJSON (experimental)</title>
+    <meta property="og:description" content="View local GeoJSON with experimental File System Access API." />
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel='stylesheet' href='https://unpkg.com/maplibre-gl@3.6.2/dist/maplibre-gl.css' />
@@ -14,19 +14,14 @@
 </head>
 <body>
 <style>
-    #file {
+    #viewbutton {
         position: absolute;
         top: 0;
         left: 0;
     }
 </style>
 <div id="map"></div>
-<input
-    type="file"
-    id="file"
-    name="file"
-    accept="application/geo+json,application/vnd.geo+json,.geojson"
-/>
+<button id="viewbutton">View local GeoJSON file</button>
 <script>
     const map = new maplibregl.Map({
         container: 'map',
@@ -36,43 +31,57 @@
         zoom: 8
     });
 
-    function handleFileSelect(evt) {
-        const file = evt.target.files[0]; // Read first selected file
+    const viewbutton = document.getElementById('viewbutton');
 
-        const reader = new FileReader();
+    async function buttonClickHandler() {
+        const [fileHandle] = await window.showOpenFilePicker({
+            // allow only single file
+            multiple: false,
 
-        reader.onload = function (theFile) {
-            // Parse as (geo)JSON
-            const geoJSONcontent = JSON.parse(theFile.target.result);
+            // apply filter for GeoJSON files
+            types: [
+                {
+                    description: 'GeoJSON',
+                    accept: {'application/geo+json': ['.geojson']}
+                }
+            ],
 
-            // Add as source to the map
-            map.addSource('uploaded-source', {
-                'type': 'geojson',
-                'data': geoJSONcontent
-            });
+            // start in download directory
+            startIn: 'downloads'
+        });
 
-            map.addLayer({
-                'id': 'uploaded-polygons',
-                'type': 'fill',
-                'source': 'uploaded-source',
-                'paint': {
-                    'fill-color': '#888888',
-                    'fill-outline-color': 'red',
-                    'fill-opacity': 0.4
-                },
-                // filter for (multi)polygons; for also displaying linestrings
-                // or points add more layers with different filters
-                'filter': ['==', '$type', 'Polygon']
-            });
-        };
+        // get file handle and read content
+        const file = await fileHandle.getFile();
+        const contents = await file.text();
 
-        // Read the GeoJSON as text
-        reader.readAsText(file, 'UTF-8');
+        // parse file as json and add as source to the map
+        map.addSource('uploaded-source', {
+            'type': 'geojson',
+            'data': JSON.parse(contents)
+        });
+
+        map.addLayer({
+            'id': 'uploaded-polygons',
+            'type': 'fill',
+            'source': 'uploaded-source',
+            'paint': {
+                'fill-color': '#888888',
+                'fill-outline-color': 'red',
+                'fill-opacity': 0.4
+            },
+            // filter for (multi)polygons; for also displaying linestrings
+            // or points add more layers with different filters
+            'filter': ['==', '$type', 'Polygon']
+        });
     }
 
-    document
-        .getElementById('file')
-        .addEventListener('change', handleFileSelect, false);
+    if ('showOpenFilePicker' in window) {
+        viewbutton.addEventListener('click', buttonClickHandler);
+    } else {
+        viewbutton.innerText =
+            'Your browser does not support File System Access API';
+        // If you want a fallback, try <input type="file">; but this uses classical file upload
+    }
 </script>
 </body>
 </html>
